<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pin_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/crossBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:contentDescription="@string/image"
        android:onClick="onCrossBtnClick"
        app:srcCompat="@drawable/cross_icn" />


    <TextView
        android:id="@+id/otpTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:gravity="center"
        android:text="@string/enter_otp_on_email"
        android:textStyle="normal" />

    <com.chaos.view.PinView
        android:id="@+id/prntEdtChangePhoneOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otpTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"
        android:textSize="20sp"
        app:hideLineWhenFilled="false"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemWidth="48dp"
        app:itemSpacing="8dp"
        app:lineColor="@color/black_disabled"
        app:lineWidth="2dp" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="70dp"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:visibility="gone"
        android:onClick="resendOtp"
        android:text="@string/resend_otp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="Verify"
        android:onClick="onNextBtnClick"
        android:textColor="@color/white"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>




